body style into CSS

--- a/Práctica 02/css/estilo02.css
+++ b/Práctica 02/css/estilo02.css
@@ -9,6 +9,8 @@
 	color:#243356;	
 }
 
+#body_bg_img {	background:  url(../images/bg_image6.jpg) center 0px no-repeat;}
+
 
 /* **** BEGIN MAIN **** */
 
